changed ending of heroes and parades

--- a/post45.html
+++ b/post45.html
@@ -25,7 +25,7 @@
            
            <p>And then there's what he's doing it for. Not glory. The quiet scenes with his daughter. Sharing ice cream. Carrying her on his shoulders. This is the stuff the rodeo performance can't give you. The <a href="post9.html">Romantic conscience</a> wants this over everything else, the private connection that's actually real. So the hero isn't the guy conquering the bull for the crowd. It's the father who goes through the danger because he's got a kid to provide for.</p>
            
-           <p>The song's not anti-hero. It's moving the goalposts. The internal family man doing his thing, not the external "big man" performance. It's the Romantic idea about authentic struggle mattering more than appearances.</p>
+           <p>The song's not anti-hero. It's choosing one kind of hero over another. The internal family man doing his thing, not the external "big man" performance. It's the Romantic idea about authentic struggle mattering more than appearances.</p>
 
            <p><a href="index.html">Home</a> | <a href="post44.html">Previous Post</a> | <a href="post46.html">Next Post</a></p>
        </article>
