three approaches to ai

--- a/ai-kit-death-author.html
+++ b/ai-kit-death-author.html
@@ -37,7 +37,7 @@
     <h3>Three Theoretical Positions</h3>
 
     <h4>1. The Purists (Meaning Requires Consciousness)</h4>
-    <p>Followers of Schleiermacher and Betti argue that without an author's mind, there's no real meaning to interpret—only patterns to analyze. An AI poem might be formally correct but semantically empty.</p>
+    <p>Followers of Schleiermacher and Betti argue that without an author's mind, there's no real meaning to interpret, only patterns to analyze. An AI poem might be formally correct but semantically empty.</p>
 
     <h4>2. The Structuralists (Meaning Lives in Language)</h4>
     <p>Following Barthes and Derrida, this camp argues that meaning was never dependent on authorial consciousness anyway. Language itself generates meaning through its own systemic operations.</p>
@@ -84,7 +84,7 @@
     </ul>
 
     <h2>The New Hermeneutic Situation</h2>
-    <p>AI texts create what we might call a "post-authorial hermeneutic situation." This isn't necessarily a loss—it might be a clarification. It forces us to acknowledge what was always true: interpretation is a creative, constructive act, not just a recovery operation.</p>
+    <p>AI texts create what we might call a "post-authorial hermeneutic situation." This isn't necessarily a loss. It might be a clarification. It forces us to acknowledge what was always true: interpretation is a creative, constructive act, not just a recovery operation.</p>
 
     <h3>Implications for Reading</h3>
     <ul>
