--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
         <nav>
             <ul>
+                <li><a href="post63.html">63 Three Roads Forward (Or Maybe Just One)</a></li>
                 <li><a href="post62.html">62 A Practical Method for Reading AI: Archaeology and Teleology</a></li>
                 <li><a href="post61.html">61 A Conflict of Interpretations: Ricoeur's Method for Reading AI</a></li>
                 <li><a href="post60.html">60 Sleep Well! The Unconscious Arrogance of Medieval Sermon Technology</a></li>
