fact checked romantic quick kit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div class="kit-cards-container">
             <section class="quickkit-card">
-                <p><a href="Romantic-quick-kit.html">Romantic Quick Kit</a> — things that might be helpful (terms, method, contexts, links).</p>
+                <p><a href="romantic-quick-kit.html">Romantic Quick Kit</a> — things that might be helpful (terms, method, contexts, links).</p>
             </section>
 
             <section class="quickkit-card">
