--- a/romantic-kit-contexts-america.html
+++ b/romantic-kit-contexts-america.html
@@ -29,7 +29,8 @@
 
     <h3>The "Dark" Romantics: A Counterpoint</h3>
     <p>Not all American Romantics shared the Transcendentalists' optimism. Writers like Nathaniel Hawthorne, Herman Melville, and Edgar Allan Poe explored the darker side of the self and the ambiguities of nature. They probed themes of sin, obsession, and psychological horror, questioning the limits of self-reliance and the inherent goodness of the individual. Yet, they still operated within a Romantic framework, valuing emotion, symbolism, and the exploration of extreme mental states.</p>
-
+    <p>Within the framework of the "circuitous journey," these writers represent a profound skepticism about the possibility of a successful return. If Emerson and Thoreau chart a course toward reintegration with the "Over-Soul," figures like Hawthorne and Melville explore the dark forests of the alienated mind, where the traveler remains haunted by sin and isolated from both nature and humanity. Their characters are often pilgrims on a failed quest, revealing the immense difficulty and potential tragedy of the Romantic project of self-redemption.</p>
+    
     <h3>Open Texts (The Primary Sources)</h3>
     <ul>
       <li>Ralph Waldo Emerson, <a href="https://nationalhumanitiescenter.org/pds/triumphnationalism/cman/text8/selfreliance.pdf"><em>Self-Reliance</em> (1841)</a> — The definitive statement of American intellectual and ethical independence.</li>
