--- a/romantic-kit-contexts-germany.html
+++ b/romantic-kit-contexts-germany.html
@@ -17,7 +17,7 @@
       <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>Contexts: Germany (The Philosophical Engine)</h1>
-    <p>German Romanticism, particularly the circle in Jena (c. 1795–1805), was the intellectual crucible of the movement. More than a literary style, it was a philosophical revolution that sought to fuse poetry with theory, art with science, and life with thought. It provided the rigorous concepts that would be adapted and transformed across Europe.</p>
+    <p>German Romanticism, particularly the circle in Jena, was the intellectual crucible of the movement. More than a literary style, it was a philosophical revolution that sought to fuse poetry with theory, art with science, and life with thought. It provided the rigorous concepts that would be adapted and transformed across Europe.</p>
 
     <h3>Signature Ideas</h3>
     <ul>
@@ -27,6 +27,8 @@
       <li><strong>The Primacy of the Aesthetic:</strong> For the German Romantics, art was not mere decoration; it was the highest form of knowledge. They believed a work of art could reveal truths about the Absolute that rational philosophy could only point to.</li>
     </ul>
 
+    <p>This philosophical project was a grand act of <a href="romantic-kit-technology-machine.html">"natural supernaturalism."</a> Thinkers like Schiller and Hegel took the Biblical plot of Creation, Fall, and Redemption and translated it into a secular, philosophical history of consciousness. The fall from Eden became the mind's necessary fall into self-awareness and division. The final Apocalypse was reimagined as the mind's achievement of a higher, self-conscious unity through reason and art. This provided the essential blueprint for the <a href="https://victorianweb.org/religion/apocalypse/dungey.html">"circuitous journey"</a> that would define the Romantic era.</p>
+    
     <h3>Key Forms & Figures</h3>
     <p>The movement's philosophical aims were reflected in its experimental forms.</p>
     <ul>
