--- a/romantic-kit-organic-form.html
+++ b/romantic-kit-organic-form.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="A guide to the Romantic concept of organic form, contrasting it with the mechanical as an analytical tool for literature and AI."/>
+  <meta name="description" content="A guide to the Romantic concept of organic form, contrasting it with the mechanical as an analytical tool for literature."/>
 </head>
 <body>
 <header data-template="header"></header>
@@ -32,17 +32,16 @@
     <p>This aesthetic theory grew out of a deeper philosophical shift, primarily in Germany.</p>
     <ul>
       <li><strong>German <em>Naturphilosophie</em>:</strong> Thinkers like Friedrich Schelling rejected the view of nature as inert matter. They argued that nature was a single, unified, self-organizing organism. For them, mind and nature were not separate; the human mind was the point at which nature became conscious of itself.</li>
-      <li><strong>Wordsworth's "Living Soul":</strong> In England, Wordsworth expressed a similar vision, perceiving in nature "a motion and a spirit, that... rolls through all things." Nature was not a backdrop but an active, moral, and spiritual teacher.</li>
+      <li><strong>Wordsworth's "Living Soul":</strong> In England, Wordsworth expressed a similar vision, perceiving in nature <a href="https://en.wikipedia.org/wiki/Lines_Written_a_Few_Miles_above_Tintern_Abbey">"a motion and a spirit, that... rolls through all things."</a> Nature was not a backdrop but an active, moral, and spiritual teacher.</li>
     </ul>
 
-    <h2>The Organic/Mechanical Lens and AI</h2>
-    <p>This binary is an exceptionally sharp tool for analyzing AI outputs.</p>
-    <ul>
-      <li>When an LLM produces a generic, template-driven sonnet that merely fills in the blanks of a form, we can describe its structure as <em>mechanical</em>.</li>
-      <li>When a text (human or AI-generated) develops in a surprising yet inevitable-seeming way, with its structure and language feeling uniquely suited to its subject, we can argue that it achieves <em>organic form</em>.</li>
-    </ul>
-    <p>The interpreter's task is to provide evidence for this judgment, tracing how the parts cohere (or fail to cohere) into a living whole.</p>
+    <h2>Interpretation and Organic Unity</h2>
+    <p>The concept of organic unity became a defining principle of Romantic aesthetics. For Coleridge, Shakespeare's plays achieve this unity because their form develops naturally out of their characters and narrative, rather than following arbitrary classical rules. The interpreter's task is to trace this inner necessity, demonstrating with evidence how a text’s unique unity emerges from its specific choices. The goal is to show how the parts cohere into a living, dynamic whole.</p>
 
+    <h2>Organic Form as Narrative: The Shape of the Journey</h2>
+    <p>The principle of organic form also shapes the narrative structure of many major Romantic works. The quintessential Romantic plot is a <a href="https://victorianweb.org/religion/apocalypse/dungey.html">"circuitous journey"</a>: a movement from unity, through alienation, to reintegration. The form of the work is "organic" because it grows to reflect this very process.</p>
+    <p>Wordsworth's <em>The Prelude</em>, for example, ends at a new version of the point in the poet's life where it began, but his understanding has been transformed by the journey of recollection that constitutes the poem itself. This spiral or circular structure, which returns to its origin on a "higher plane," is the ultimate expression of organic form. It is not a template imposed from without, but a shape that emerges from the inner, developmental logic of the artist's life and vision.</p>
+    
     <h3>Further Reading (Open Sources)</h3>
     <ul>
       <li><strong>Theory:</strong>
