--- a/romantic-kit-authenticity.html
+++ b/romantic-kit-authenticity.html
@@ -17,22 +17,27 @@
       <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>Authenticity (The Evidenced 'Self')</h1>
-    <p>For the Romantics, authenticity was not a confession of sincere feelings. It was an aesthetic and ethical ideal: a work of art or a life should be a true expression of a singular, inner vision, not an imitation of external models. Authenticity is something you *achieve* in the work, not something you simply feel. It is a quality an interpreter can demonstrate through analysis.</p>
+    <p>For the Romantics, authenticity was not a confession of sincere feelings. It was an aesthetic and ethical ideal: a work of art or a life should be a true expression of a singular, inner vision, not an imitation of external models. Authenticity is something you achieve in the work, not something you simply feel. It is a quality an interpreter can demonstrate through analysis.</p>
 
     <h2>How to Read for Authenticity</h2>
     <p>Authenticity is discovered by applying the <a href="Romantic-kit-hermeneutics.html">two-rail method</a>. It is the demonstrable coherence between the <strong>psychological side</strong> (the work's unique pattern of choices) and the <strong>grammatical side</strong> (the conventions it engages with). An "authentic" work is one where a distinctive vision has shaped its own unique form.</p>
+    <p>As William Wordsworth famously declared, poetry should be "the spontaneous overflow of powerful feelings." This did not mean unfiltered emotion, but a genuine voice, true to the poet's own emotions and to the "real language of men," rather than the contrived elegance of Neoclassical verse.</p>
 
     <h3>Three National Case Studies</h3>
     <p>The ideal of authenticity took different forms depending on the cultural context.</p>
     <ul>
       <li><strong>Germany (The Unique Vision):</strong> Building on Herder's idea that every people (<em>Volk</em>) has its own unique spirit (<em>Volksgeist</em>), German Romantics sought an authenticity of thought. A work was authentic if its form was a necessary expression of a singular philosophical or spiritual insight, breaking from classical rules to create its own.</li>
-      <li><strong>England (The Language of Real Life):</strong> Wordsworth and Coleridge pursued authenticity in diction and subject. They rejected the "gaudy and inane phraseology" of neoclassical poetry. The evidence of authenticity in their work is the deliberate choice of "language really used by men" and the dignifying of rustic, common life as a serious subject for art.</li>
+      <li><strong>England (The Language of Real Life):</strong> In their "Preface to Lyrical Ballads," Wordsworth and Coleridge pursued authenticity in diction and subject. They rejected the "gaudy and inane phraseology" of earlier poetry. The evidence of authenticity in their work is the deliberate choice of "language really used by men" and the dignifying of rustic, common life as a serious subject for art.</li>
       <li><strong>America (The Nonconformist Self):</strong> The Transcendentalists radicalized authenticity into an ethical principle of nonconformity. For Emerson, it was a duty to "Trust thyself." For Thoreau, it was a lived experiment in stripping away the inessential. American Romantic authenticity is evidenced by a text's active protest against social and intellectual imitation.</li>
     </ul>
 
-    <h2>Authenticity and AI</h2>
-    <p>The Romantic method allows us to ask a more interesting question than "Is AI sincere?" We can instead ask: "Can an AI model produce a text with 'synthetic authenticity'?" This would mean tracing a consistent and unique pattern of choices—a recognizable style or 'voice'—across multiple outputs. The question shifts from metaphysics (does it have a soul?) to textual evidence (can we demonstrate a singular practice?).</p>
+    <h2>The Legacy of Authenticity</h2>
+    <p>The Romantic "cult of the self" was a powerful reaction against what was seen as the superficial or socially imposed identities of Enlightenment society. Instead, Romantics celebrated original genius—be it the solitary visionary artist or the untutored peasant whose folk song conveys genuine feeling. This ideal remains a lasting legacy, underpinning modern notions of artistic originality, self-expression, and personal integrity.</p>
 
+    <h2>Authenticity as a Process: The Theodicy of the Self</h2>
+    <p>The quest for authenticity was more than a stylistic preference; it was a profound spiritual project. Many Romantic works are a form of secular "theodicy," an attempt to justify the ways of the world to the individual mind. Where Milton sought to "justify the ways of God to men," a poet like Wordsworth sought to justify the experience of loss and suffering as essential to the growth of his own mind.</p>
+    <p>Authenticity, in this view, is earned. It is the wisdom achieved by one who has journeyed through what Keats called the "vale of Soul-making." The authentic self is not the innocent self, but the self that has fallen into division and despair, and has re-forged its identity on a higher level of consciousness. The suffering is justified because it creates a more profound, more resilient, and more complete individual.</p>
+    
     <h3>Further Reading (Open Sources)</h3>
     <ul>
       <li><strong>Manifestos of Authenticity:</strong>
