--- a/romantic-quick-kit.html
+++ b/romantic-quick-kit.html
@@ -18,17 +18,18 @@
       </div>
       <h1>Romantic Quick Kit</h1>
       <h2>How to use this</h2>
+      <p>The concepts in this kit are interconnected. Many Romantic writers and thinkers shared a central story: a journey that begins in a state of primal unity, falls into a painful state of division and alienation, and concludes by returning home to a higher, more self-aware state of integration. Think of it as a great circle or spiral. The pages below explore the key features of this journey.</p>
       <ul>
-        <li>Use the Hermeneutics page as your reading method; the other pages are “what” to look for.</li>
+        <li>Use the Hermeneutics page as your reading method; the other pages are what to look for as you read.</li>
         <li>Every page links out to public sources so you can dive deeper without a paywall.</li>
       </ul>
 
       <nav class="toc">
         <ul>
           <li><a href="Romantic-kit-hermeneutics.html">Romantic Hermeneutics (How to Read)</a></li>
-          <li><a href="Romantic-kit-authenticity.html">Authenticity (Self &amp; Sincerity)</a></li>
+          <li><a href="Romantic-kit-authenticity.html">Authenticity (Self & Sincerity)</a></li>
           <li><a href="Romantic-kit-organic-form.html">The “Organic” (Art, Nature, Unity)</a></li>
-          <li><a href="Romantic-kit-technology-machine.html">Technology &amp; The Machine</a></li>
+          <li><a href="Romantic-kit-technology-machine.html">Technology & The Machine</a></li>
           <li><a href="Romantic-kit-contexts-germany.html">Contexts: Germany</a></li>
           <li><a href="Romantic-kit-contexts-england.html">Contexts: England</a></li>
           <li><a href="Romantic-kit-contexts-america.html">Contexts: America</a></li>
